test-app/ngix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: nginx-deployment
