test-app/nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-deployment
spec:
  host: nginx-deployment.apps.ocp-setu.waltoninstitute.ie
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx-deployment
